# learn-claude-code-rs

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  _typos.toml  cliff.toml
.github/workflows/: build.yml
crates/v0_bash_agent/: Cargo.toml  MODEL_SELECTION.md  NEWAPI_DEBUG.md  README.md  SUMMARY.md  demo_model_selection.sh  quick_test.sh  setup_env.sh  test_env.sh
crates/v0_bash_agent/src/: lib.rs  main.rs
crates/v0_bash_agent/tests/: integration_test.rs
crates/v1_basic_agent/: Cargo.toml  README.md
crates/v1_basic_agent/src/: main.rs
crates/v2_todo_agent/: Cargo.toml  README.md
crates/v2_todo_agent/src/: main.rs
crates/v3_subagent/: Cargo.toml  README.md
crates/v3_subagent/src/: main.rs
crates/v4_skills_agent/: Cargo.toml  README.md
crates/v4_skills_agent/src/: main.rs
crates/v5_mcp_agent/: Cargo.toml  MCP_INTEGRATION_NOTES.rs  README.md
crates/v5_mcp_agent/src/: main.rs  main.rs.bak  mcp_client.rs
