[package]
name = "mini-code"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/v0_bash_agent", "crates/v1_basic_agent"]
resolver = "2"

[workspace.dependencies]
anthropic = { git = "https://github.com/andyli386/anthropic-rs.git" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
anyhow = "1"
colored = "3"
reqwest = "0.13.1"
