[package]
name = "v1_basic_agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "v1_basic_agent"
path = "src/main.rs"

[dependencies]
anthropic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }
