[package]
name = "v2_todo_agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "v2_todo_agent"
path = "src/main.rs"

[features]
default = ["readline"]
readline = ["rustyline"]

[dependencies]
anthropic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
colored = { workspace = true }

# Optional: for better UTF-8 input handling
rustyline = { version = "14", optional = true }
