[package]
name = "v3_subagent"
version = "0.1.0"
edition = "2021"

[dependencies]
anthropic.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
colored.workspace = true
rustyline = { workspace = true, optional = true }

[features]
default = ["readline"]
readline = ["rustyline"]
